--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
     <artifactId>testng</artifactId>
     <version>7.10.2</version>
     </dependency>
+    <dependency> <groupId>org.projectlombok</groupId> <artifactId>lombok</artifactId> <version>1.18.32</version> <!-- check latest version --> <scope>provided</scope>
+     </dependency>
   </dependencies>
   
   <profiles>
